# milkpay-xrocket

./: .gitignore  Makefile  README.rst  pyproject.toml
.github/workflows/: pypi-release.yml
examples/: fastapi_webhook_handler.py  get_invoice_history.py
src/milkpay/xrocket/: __init__.py
src/milkpay/xrocket/enums/: __init__.py  cheque_status.py  invoice_status.py  network_code.py  order_execute_type.py  order_status.py  order_type.py  subscription_interval.py  subscription_status.py  webhook_type.py  withdrawal_status.py
src/milkpay/xrocket/pay/: __init__.py  client.py  exceptions.py
src/milkpay/xrocket/pay/methods/: __init__.py  base.py  check_subscription.py  create_cheque.py  create_invoice.py  create_subscription.py  create_subscription_interval.py  delete_cheque.py  delete_invoice.py  delete_subscription.py  delete_subscription_interval.py  edit_cheque.py  edit_subscription_interval.py  get_app_info.py  get_cheque.py  get_cheques.py  get_coins.py  get_invoice.py  get_invoices.py  get_subscription.py  get_subscription_interval.py  get_subscriptions.py  get_version.py  get_withdrawal_fees.py  get_withdrawal_status.py  transfer.py  withdrawal.py
src/milkpay/xrocket/pay/types/: __init__.py  api_bad_request_error.py  api_error.py  app.py  app_balance.py  app_create_withdrawal_dto.py  app_dto.py  available_coins.py  available_coins_data.py  base.py  cheque.py  coin_dto.py  create_transfer_dto.py  delete_response_dto.py  full_invoice_dto.py  full_invoice_response_dto.py  invoice.py  invoice_dto.py  pagination.py  pay_invoice_dto.py  pay_invoice_stat_dto.py  property_error.py  response_dto.py  response_multi_dto.py  set.py  short_cheque_dto.py  subscription.py  subscription_interval.py  subscription_interval_dto.py  subscription_resource.py  tg_resource.py  transfer_dto.py  update.py  update_cheque_dto.py  user_subscription.py  user_subscription_transaction.py  version.py  webhook_dto.py  withdraw_fee_dto.py  withdraw_fee_network_dto.py  (+4 more)
src/milkpay/xrocket/trade/: client.py  exceptions.py
src/milkpay/xrocket/trade/methods/: __init__.py  base.py  cancel_order.py  create_order.py  get_available_crypto_currencies.py  get_available_fiat_currencies.py  get_balance.py  get_balances.py  get_fees.py  (+16 more)
(+38 files in other folders)
