[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "milkpay.xrocket"
description = "A lightweight xRocket API Python SDK"
readme = "README.rst"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "wakaree", email = "nullmatawasoradesu@gmail.com" },
]
maintainers = [
    { name = "wakaree", email = "nullmatawasoradesu@gmail.com" },
]
keywords = [
    "crypto",
    "xrocket",
    "payments",
    "wrapper",
    "asyncio",
    "client",
]
dependencies = [
    "pydantic>=2.4.1,<2.10",
    "stollen~=0.2.10",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[tool.hatch.version]
path = "src/milkpay/xrocket/__meta__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/milkpay"]

[project.optional-dependencies]
dev = [
    "black~=24.8.0",
    "ruff~=0.6.1",
    "mypy~=1.11.1",
    "pre-commit~=3.8.0"
]
[project.urls]
Repository = "https://github.com/py-stollen/milkpay-xrocket"
"Pay API Documentation" = "https://pay.xrocket.tg/api"
"Exchange API Documentation" = "https://trade.xrocket.tg/api"

[tool.black]
line-length = 99
target-version = ['py311']
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | \.?venv
  | build
  | dist
)
'''

[tool.ruff]
target-version = "py311"
line-length = 99
lint.select = [
    "C",
    "DTZ",
    "E",
    "F",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "Q",
    "S",
    "T",
    "W",
    "YTT",
    "RET",
    "SIM",
    "ASYNC",
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "docs",
    "tests",
    "dev",
    "scripts",
    "*.egg-info",
]

[tool.ruff.lint.per-file-ignores]
"src/milkpay/xrocket/*/types/*" = ["E501"]
"src/milkpay/xrocket/*/methods/*" = ["E501"]

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = [".venv", ".idea"]
